fix(panel): update spacing tokens

--- a/packages/calcite-components/src/components/panel/panel.scss
+++ b/packages/calcite-components/src/components/panel/panel.scss
@@ -36,8 +36,8 @@
 }
 
 :host([scale="m"]) {
-  --calcite-internal-panel-default-padding: var(--calcite-spacing-md);
-  --calcite-internal-panel-header-vertical-padding: var(--calcite-spacing-lg);
+  --calcite-internal-panel-default-padding: var(--calcite-spacing-md-plus);
+  --calcite-internal-panel-header-vertical-padding: var(--calcite-spacing-md);
 
   .header-content {
     .heading {
